--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -17,7 +17,6 @@ $width: 33.3%;
   min-height: 700px;
   margin: 100px 0 0 0;
 
-  
   .main-over-wrapper {
     display: inline-block;
     position: relative;
@@ -30,14 +29,16 @@ $width: 33.3%;
       }
       
       .grid-item{
-        box-shadow: 0 20px 0 0 rgba($mainColor, 0.15);
+        box-shadow: 0 4px 0 0 rgba($mainColor4, 0.14);
         width: $width;
         overflow: hidden;
+        margin-bottom: 12px;
+        border-radius: 2px;
         // transition: all 0.5s;
 
-        &:hover {
-          cursor: pointer;
-        }
+        // &:hover {
+        //   cursor: pointer;
+        // }
         
         .article-content {
           position: relative;
@@ -50,66 +51,70 @@ $width: 33.3%;
               left: 0px;
               top: 0px;
               border-radius: 0;
-              background: $backgroundOverArticles;
             }
           }
-  
+
+          .over-article-loader {
+            width: 100%;
+            height: 100%;
+            background-color: $mainColor4;
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+
           .over-article-container {
             position: absolute;
             width: 100%;
             height: 100%;
-            background: $secondaryColor;
             transition: 0.3s all;
-            transform: translate(100%, -100%);
             transform-origin: 0 0;
-
-
-            .over-article-loader {
-              width: 100%;
-              height: 100%;
-              background-color: $mainColor;
-              position: absolute;
-              top: 0;
-              left: 0;
-            }
+            transform: translate(0, -100%);
             
             .over-article-wrapper {
               position: relative;
               height: 50%;
               text-align: left;
               
-              // margin-top: -10px;
-              
               .over-article-top {
+                background: $backgroundOverArticles;
                 overflow: hidden;
                 width: 100%;
                 
 
                 .over-article-title {
                   display: inline-block;
-                  margin: 20px 45px 0px 20px;
+                  margin: 7px 25px 0px 7px;
                   padding-bottom: -2px;
                   font-family: 'eleb';
-                  text-transform: uppercase;
-                  font-size: 3.1em;
+                  font-size: 3em;
                   line-height: 1.1em;
                   -webkit-font-smoothing: antialiased !important;
-                  width: 70%;
-                  color: $backgroundGray;
+                  width: 80%;
+                  color: $secondaryColor3;
                   -webkit-hyphens: auto;
                   -moz-hyphens: auto;
                   -ms-hyphens: auto;
                   hyphens: auto;
+                  text-transform: uppercase;
                   -webkit-hyphenate-character: '⌁';
+                  cursor: pointer;
+                  
+                  .over-article-subtitle {
+                    color: $textColor;
+                    font-family: 'elem';
+                  }
                   
                 }
                 
                 .over-article-type {
                   color: $backgroundOverArticles;
-                  font-size: 1rem;
-                  font-family: 'ratDemiB';
-                  margin: 30px 20px 10px 22px;
+                  font-size: 0.8rem;
+                  font-family: 'LMono';
+                  margin: 30px 7px 10px 7px;
                   -webkit-font-smoothing: antialiased !important;
+                  font-variation-settings: 'wght' 800, 'wdth' 95;
+
 
                   span {
                     
@@ -120,14 +125,14 @@ $width: 33.3%;
                     -moz-hyphens: none;
                     -ms-hyphens: none;
                     hyphens: none;
-                    letter-spacing: 0.05em;
+                    letter-spacing: 0.08em;
                     background-color: $typeColor;
-                    padding: 5px 6px 2px 5px;
+                    padding: 1px 6px 2px 5px;
                     position: relative;
                     
                     &:before {
                       content: "type:";
-                      font-family: 'ratDemiB';
+                      font-family: 'LMono';
                       text-transform: none;
                       font-size: 0.7rem;
                       top: -16px;
@@ -140,40 +145,44 @@ $width: 33.3%;
                 }
               }
               .over-article-bottom {
-                width: 92%;
-                height: 240px;
+                width: 100%;
+                // height: 240px;
                 text-align: left;
                 
                 .over-article-keywords {
+                  //padding-bottom: 12px;
+                  //padding-top: 10px;
+                  // padding-left: 8px;
                   width: 100%;
-                  height: 100%;
-                  display: none;
-                  margin-left: 20px;
-                  margin-top: 10px;
+                  overflow: hidden;
+                  line-height: 1.2rem;
                   
                   .over-article-keyword {
-                    margin-top: 10px;
-                    margin-right: 2px;
                     -webkit-font-smoothing: antialiased !important;
-                    font-family: 'ratDemiB';
-                    text-transform: capitalize;
-                    font-size: 1em;    
-                    text-decoration: underline;
-                    color: $bottomTextColor;
-                    text-decoration-color: transparent;
-                    padding: 4px 2px 1px 2px;
+                    background-color: $backgroundOverArticles;
+                    // text-transform: capitalize;
+                    font-size: 0.7em;
+                    text-decoration: none;
+                    display: inline-block;
+                    padding: 4px 8px 8px 8px;
+                    cursor: pointer;
                     
                     .over-article-word {
+                      color: $myWhite;
+                      border-bottom: 1px solid $myWhite;
+                      font-family: 'LMono';
+                      font-variation-settings: "wght" 550, "wdth" 110;
                       text-transform: uppercase;
-                      transition: .1s all ease-out;
-                      border: 2px solid $bottomTextColor;
-                      padding: 5px 5px 1px 4px;
+                      transition: .2s all ease-out;
+                      padding-bottom: 2px;
+                      
                     }
-
+                    
                     &:hover {
                       .over-article-word {
-                        border: 2px solid $articlesOverLetters;
-                        color: $articlesOverLetters;
+                        border-bottom: 1px solid $secondaryColor2;
+                        // background-color: $secondaryColor3;
+                        // color: $secondaryColor;
                       }
                     }
                   }
@@ -190,21 +199,21 @@ $width: 33.3%;
           }
         }
         
-        .article-label {
-          text-align: left;
-          font-family: 'ratLight';
-          // -webkit-font-smoothing: antialiased;
-          color: $mainColor;
-          font-size: 0.8em;
-          margin-top: 8px;
-          font-weight: 300;
-          padding: 0 10px;
-          padding-bottom: 14px;
-          margin-bottom: 10px;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }
+        // .article-label {
+        //   text-align: left;
+        //   font-family: 'LMono';
+        //   // -webkit-font-smoothing: antialiased;
+        //   color: $mainColor;
+        //   font-size: 0.8em;
+        //   margin-top: 8px;
+        //   font-weight: 300;
+        //   padding: 0 10px;
+        //   padding-bottom: 14px;
+        //   margin-bottom: 10px;
+        //   white-space: nowrap;
+        //   overflow: hidden;
+        //   text-overflow: ellipsis;
+        // }
 
         &:hover {
           .article-label {
@@ -225,20 +234,20 @@ $width: 33.3%;
 }
 
 @media all and (max-width: 3000px) {
-  .grid-sizer {width: calc( 25%) !important}
-  .grid-item {width: calc( 25%) !important}
+  .grid-sizer {width: calc( 25% - 10px) !important}
+  .grid-item {width: calc( 25% - 10px) !important}
   .grid-item-widthx2 {width: calc( 50%) !important}
 }
 
 @media all and (max-width: 1400px) {
-  .grid-sizer {width: calc(33.3%) !important}
-  .grid-item {width: calc(33.3%) !important}
+  .grid-sizer {width: calc(33.3% - 10px) !important}
+  .grid-item {width: calc(33.3% - 10px) !important}
   .grid-item-widthx2 {width: calc(66.6%) !important}
 }
 
 @media all and (max-width: 1090px) {
-  .grid-sizer {width: calc(50%) !important}
-  .grid-item {width: calc(50%) !important}
+  .grid-sizer {width: calc(50% - 10px) !important}
+  .grid-item {width: calc(50% - 10px) !important}
   .grid-item-widthx2 {width: 100% !important}
 }
 
