--- a/src/sass/libs/_bar.scss
+++ b/src/sass/libs/_bar.scss
@@ -33,24 +33,21 @@
   
   .bar-wrapper {
     position: relative;
-    width: 404px;
     height: 100%;
     
     #bar-trigger {
       color: $trigger-color;
-      font-family: 'ratDemiB';
+      font-family: 'LMono';
       opacity: 0;
       transition: all 0.25s ease-in;
-      left: 370px; 
-      bottom: 0px;
+      left: 369px; 
+      bottom: 10%;
       position: absolute;
       text-transform: uppercase;
       text-align: left;
       transform: rotateZ(-90deg);
       transform-origin: left top;
 
-      
-      
       &:hover {
         cursor: pointer;
         .icon {
@@ -59,7 +56,7 @@
       }
       
       .tag-position {        
-        width: 300px;
+        width: 400px;
         
         .tag-background {
 
@@ -74,7 +71,7 @@
           font-size: 0.9rem;
           letter-spacing: 0.1em;
           -webkit-font-smoothing: antialiased;
-          padding: 13px 10px 8px 10px;
+          padding: 10px 10px 8px 10px;
 
           span {
             display: inline;
@@ -88,8 +85,9 @@
           .tag {
             // text-decoration: underline;
             // text-decoration-color: $secondaryColor;
-            font-family: 'ratDBi';
+            font-family: 'LMono';
             text-transform: uppercase;
+            font-variation-settings: 'wght' 1000, 'wdth' 130;
           }
         }
       }
@@ -148,7 +146,9 @@
           -webkit-hyphenate-character: '⌁';
 
           color: $items-colors;       
-          font-family: 'ratDemiB';
+          font-family: 'LMono';
+          font-variation-settings: 'wght' 400, 'wdth' 110;
+          letter-spacing: 0.2rem;
           -webkit-font-smoothing: antialiased;              
           text-decoration: none;
           display: inline-block;
@@ -156,16 +156,16 @@
           text-transform: uppercase;
           margin-right: 9px;
           font-size: 1.2em;
-          border: 2px solid transparent;
+          border: 1px solid transparent;
           margin-bottom: 6px;
-          border-bottom: 2px solid $items-colors;
-          padding: 3px 2px 0px 2px; 
+          border-bottom: 1px solid $items-colors;
+          padding: 3px 2px 4px 2px; 
 
           &:hover {
             cursor: pointer;
-            border: 2px solid $items-colors-over;
             color: $items-colors-over;
-            box-shadow: 0px 0px 4px 1px rgba($items-colors-over, .4);
+            border-bottom: 1px solid $items-colors-over;
+            text-shadow: 0px 0px 2px 1px rgba($items-colors-over, .2);
           }
         }
       }
