--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -10,18 +10,19 @@ $width: 33.3%;
 }
 
 #main-content {
-  width: 100%;
+  width: 94%;
   text-align: center;
   display: inline-block;
   height: auto;
   min-height: 700px;
-  margin: 100px 0 0 0;
+  margin: 100px 3% 0 3%;
 
   .main-over-wrapper {
     display: inline-block;
     position: relative;
     min-width: 250px;
     width: 100%;
+    margin-left: 9px;
     
     .main-content-wrapper {
       .grid-item-widthx2 {
@@ -29,16 +30,12 @@ $width: 33.3%;
       }
       
       .grid-item{
-        box-shadow: 0 4px 0 0 rgba($mainColor4, 0.14);
+        box-shadow: 0 18px 0 0 rgba($mainColor4, 0.14);
         width: $width;
         overflow: hidden;
-        margin-bottom: 12px;
-        border-radius: 2px;
-        // transition: all 0.5s;
+        margin-bottom: 36px;
+        border-radius: 4px;
 
-        // &:hover {
-        //   cursor: pointer;
-        // }
         
         .article-content {
           position: relative;
@@ -80,7 +77,6 @@ $width: 33.3%;
                 background: $backgroundOverArticles;
                 overflow: hidden;
                 width: 100%;
-                
 
                 .over-article-title {
                   display: inline-block;
@@ -99,6 +95,14 @@ $width: 33.3%;
                   text-transform: uppercase;
                   -webkit-hyphenate-character: '⌁';
                   cursor: pointer;
+
+                  &:hover {
+                    text-decoration: underline;
+                    .over-article-subtitle {
+                      text-decoration: underline;
+
+                    }
+                  }
                   
                   .over-article-subtitle {
                     color: $textColor;
@@ -153,7 +157,7 @@ $width: 33.3%;
                   //padding-bottom: 12px;
                   //padding-top: 10px;
                   // padding-left: 8px;
-                  width: 100%;
+                  width: 90%;
                   overflow: hidden;
                   line-height: 1.2rem;
                   
@@ -164,12 +168,12 @@ $width: 33.3%;
                     font-size: 0.7em;
                     text-decoration: none;
                     display: inline-block;
-                    padding: 4px 8px 8px 8px;
+                    padding: 3px 8px 6px 8px;
                     cursor: pointer;
                     
                     .over-article-word {
                       color: $myWhite;
-                      border-bottom: 1px solid $myWhite;
+                      // border-bottom: 1px solid $myWhite;
                       font-family: 'LMono';
                       font-variation-settings: "wght" 550, "wdth" 110;
                       text-transform: uppercase;
@@ -234,31 +238,39 @@ $width: 33.3%;
 }
 
 @media all and (max-width: 3000px) {
-  .grid-sizer {width: calc( 25% - 10px) !important}
-  .grid-item {width: calc( 25% - 10px) !important}
+  .grid-sizer {width: calc( 25% - 18px) !important}
+  .grid-item {width: calc( 25% - 18px) !important}
   .grid-item-widthx2 {width: calc( 50%) !important}
 }
 
-@media all and (max-width: 1400px) {
-  .grid-sizer {width: calc(33.3% - 10px) !important}
-  .grid-item {width: calc(33.3% - 10px) !important}
+@media all and (max-width: 1500px) {
+  .grid-sizer {width: calc(33.3% - 18px) !important}
+  .grid-item {width: calc(33.3% - 18px) !important}
   .grid-item-widthx2 {width: calc(66.6%) !important}
 }
 
-@media all and (max-width: 1090px) {
-  .grid-sizer {width: calc(50% - 10px) !important}
-  .grid-item {width: calc(50% - 10px) !important}
+@media all and (max-width: 1050px) {
+  .grid-sizer {width: calc(50% - 18px) !important}
+  .grid-item {width: calc(50% - 18px) !important}
   .grid-item-widthx2 {width: 100% !important}
 }
 
-@media all and (max-width: 582px) {
+@media all and (max-width: 700px) {
   #main-content {
     margin-right: 0% !important;
+    margin-left: 0% !important;
   }
-  .grid-sizer {width: 100% !important}
+  .grid-sizer {
+    width: 100% !important
+  }
+
   .grid-item {
     width: 100% !important;
+    margin-bottom: 0px !important;
   }
-  .grid-item-widthx2 {width: 100% !important}
+
+  .grid-item-widthx2 {
+    width: 100% !important
+  }
 }
 
