--- a/public/css/main.css
+++ b/public/css/main.css
@@ -369,7 +369,7 @@ svg:focus {
       width: 33.3%;
       overflow: hidden;
       margin-bottom: 36px;
-      border-radius: 4px; }
+      border-radius: 3px; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content {
         position: relative;
         margin-bottom: -4px;
@@ -418,10 +418,9 @@ svg:focus {
                 text-transform: uppercase;
                 -webkit-hyphenate-character: '⌁';
                 cursor: pointer; }
-                #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-title:hover {
-                  text-decoration: underline; }
-                  #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-title:hover .over-article-subtitle {
-                    text-decoration: underline; }
+                #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-title:hover .over-article-subtitle {
+                  background-color: #e6fcff;
+                  color: #322934; }
                 #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-title .over-article-subtitle {
                   color: #e6fcff;
                   font-family: 'elem'; }
