--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -34,7 +34,7 @@ $width: 33.3%;
         width: $width;
         overflow: hidden;
         margin-bottom: 36px;
-        border-radius: 4px;
+        border-radius: 3px;
 
         
         .article-content {
@@ -97,10 +97,9 @@ $width: 33.3%;
                   cursor: pointer;
 
                   &:hover {
-                    text-decoration: underline;
                     .over-article-subtitle {
-                      text-decoration: underline;
-
+                      background-color: $thirdColor4;
+                      color: $mainColor4;
                     }
                   }
                   
