--- a/public/css/main.css
+++ b/public/css/main.css
@@ -219,7 +219,7 @@ svg:focus {
     #main-bar .bar-wrapper #bar-menu {
       width: 360px;
       display: inline-block;
-      background: #322934;
+      background: #cfffff;
       height: 100%;
       padding-top: 0px; }
       #main-bar .bar-wrapper #bar-menu .item-bar-link:hover {
@@ -232,7 +232,7 @@ svg:focus {
           -webkit-font-smoothing: antialiased;
           text-decoration: none;
           font-size: 3.8rem;
-          color: #131618;
+          color: #322934;
           line-height: 3.5rem;
           -webkit-hyphens: auto;
           -moz-hyphens: auto;
@@ -241,11 +241,11 @@ svg:focus {
           -webkit-hyphenate-character: '⌁'; }
           #main-bar .bar-wrapper #bar-menu .main-bar-list .bar-link:hover {
             cursor: pointer;
-            background: url("/img/noise1.png") rgba(230, 252, 255, 0.8);
+            background: url("/img/noise1.png") rgba(255, 67, 105, 0.8);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
-            text-shadow: 0px 0px 10px rgba(230, 252, 255, 0.5); }
+            text-shadow: 0px 0px 10px rgba(255, 67, 105, 0.5); }
       #main-bar .bar-wrapper #bar-menu .secondary-bar-list {
         padding: 6px 10px 0 10px; }
         #main-bar .bar-wrapper #bar-menu .secondary-bar-list .bar-link {
@@ -254,7 +254,7 @@ svg:focus {
           -ms-hyphens: auto;
           hyphens: auto;
           -webkit-hyphenate-character: '⌁';
-          color: #131618;
+          color: #322934;
           font-family: 'LMono';
           font-variation-settings: 'wght' 400, 'wdth' 110;
           letter-spacing: 0.2rem;
@@ -266,13 +266,13 @@ svg:focus {
           font-size: 1.2em;
           border: 1px solid transparent;
           margin-bottom: 6px;
-          border-bottom: 1px solid #131618;
+          border-bottom: 1px solid #322934;
           padding: 3px 2px 4px 2px; }
           #main-bar .bar-wrapper #bar-menu .secondary-bar-list .bar-link:hover {
             cursor: pointer;
-            color: #e6fcff;
-            border-bottom: 1px solid #e6fcff;
-            text-shadow: 0px 0px 2px 1px rgba(230, 252, 255, 0.2); }
+            color: #FF4369;
+            border-bottom: 1px solid #FF4369;
+            text-shadow: 0px 0px 2px 1px rgba(255, 67, 105, 0.2); }
       #main-bar .bar-wrapper #bar-menu .bar-bottom {
         width: 100%;
         height: 100%;
@@ -369,7 +369,7 @@ svg:focus {
       width: 33.3%;
       overflow: hidden;
       margin-bottom: 36px;
-      border-radius: 3px; }
+      border-radius: 2px; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content {
         position: relative;
         margin-bottom: -4px;
@@ -401,7 +401,7 @@ svg:focus {
               background: rgba(50, 41, 52, 0.999);
               overflow: hidden;
               width: 100%; }
-              #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-title {
+              #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-titles {
                 display: inline-block;
                 margin: 7px 25px 0px 7px;
                 padding-bottom: -2px;
@@ -418,10 +418,13 @@ svg:focus {
                 text-transform: uppercase;
                 -webkit-hyphenate-character: '⌁';
                 cursor: pointer; }
-                #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-title:hover .over-article-subtitle {
-                  background-color: #e6fcff;
+                #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-titles .over-article-title {
+                  margin-right: 4px;
+                  padding-right: 4px; }
+                #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-titles:hover .over-article-title {
+                  background-color: #ff9bbd;
                   color: #322934; }
-                #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-title .over-article-subtitle {
+                #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-titles .over-article-subtitle {
                   color: #e6fcff;
                   font-family: 'elem'; }
               #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-type {
@@ -482,7 +485,7 @@ svg:focus {
       #main-content .main-over-wrapper .main-content-wrapper .grid-item:hover .article-label {
         color: #ff4369; }
         #main-content .main-over-wrapper .main-content-wrapper .grid-item:hover .article-label::after {
-          color: rgba(168, 255, 255, 0.87); }
+          color: #a8ffff; }
 
 .grid-sizer {
   width: 33.3%; }
