--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -34,7 +34,7 @@ $width: 33.3%;
         width: $width;
         overflow: hidden;
         margin-bottom: 36px;
-        border-radius: 3px;
+        border-radius: 2px;
 
         
         .article-content {
@@ -78,7 +78,7 @@ $width: 33.3%;
                 overflow: hidden;
                 width: 100%;
 
-                .over-article-title {
+                .over-article-titles {
                   display: inline-block;
                   margin: 7px 25px 0px 7px;
                   padding-bottom: -2px;
@@ -96,11 +96,19 @@ $width: 33.3%;
                   -webkit-hyphenate-character: '⌁';
                   cursor: pointer;
 
+                  .over-article-title {
+                    margin-right: 4px;
+                    padding-right: 4px;
+                  }
+                  
+                  
                   &:hover {
-                    .over-article-subtitle {
-                      background-color: $thirdColor4;
+                    .over-article-title {
+                      background-color: $secondaryColor3;
                       color: $mainColor4;
                     }
+                    // .over-article-subtitle {
+                    // }
                   }
                   
                   .over-article-subtitle {
