--- a/src/sass/libs/_curriculum.scss
+++ b/src/sass/libs/_curriculum.scss
@@ -54,6 +54,10 @@
   58% { background-position: 0 0 }
 }
 
+.curriculum-trigger-down {
+  background-color: $secondaryColor2 !important;
+}
+
 .elf {
   .legs {
     -webkit-transform-origin: 35px 48px;
