--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -22,7 +22,7 @@ $width: 33.3%;
     position: relative;
     min-width: 250px;
     width: 100%;
-    margin-left: 9px;
+    margin-left: 15px;
     
     .main-content-wrapper {
       .grid-item-widthx2 {
@@ -33,7 +33,7 @@ $width: 33.3%;
         box-shadow: 0 18px 0 0 rgba($mainColor4, 0.14);
         width: $width;
         overflow: hidden;
-        margin-bottom: 36px;
+        margin-bottom: 46px;
         border-radius: 2px;
 
         
@@ -44,7 +44,7 @@ $width: 33.3%;
 
           &:hover {
             .over-article-container {
-              transform: translate(0, 0);
+              transform: translateY(0);
               left: 0px;
               top: 0px;
               border-radius: 0;
@@ -64,9 +64,9 @@ $width: 33.3%;
             position: absolute;
             width: 100%;
             height: 100%;
-            transition: 0.3s all;
+            transition: all 0.4s;
             transform-origin: 0 0;
-            transform: translate(0, -100%);
+            transform: translateY(-100%);
             
             .over-article-wrapper {
               position: relative;
@@ -76,17 +76,17 @@ $width: 33.3%;
               .over-article-top {
                 background: $backgroundOverArticles;
                 overflow: hidden;
-                width: 100%;
 
                 .over-article-titles {
                   display: inline-block;
-                  margin: 7px 25px 0px 7px;
+                  margin: 0px 25px 0px 7px;
+                  padding-top: 7px;
                   padding-bottom: -2px;
                   font-family: 'eleb';
-                  font-size: 3em;
-                  line-height: 1.1em;
+                  font-size: 1.8rem;
+                  line-height: 1.3em;
                   -webkit-font-smoothing: antialiased !important;
-                  width: 80%;
+                  width: 90%;
                   color: $secondaryColor3;
                   -webkit-hyphens: auto;
                   -moz-hyphens: auto;
@@ -95,26 +95,29 @@ $width: 33.3%;
                   text-transform: uppercase;
                   -webkit-hyphenate-character: '⌁';
                   cursor: pointer;
-
+                  
                   .over-article-title {
                     margin-right: 4px;
+                    transition: 0.3s all ease-in-out;
                     padding-right: 4px;
                   }
                   
-                  
-                  &:hover {
-                    .over-article-title {
-                      background-color: $secondaryColor3;
-                      color: $mainColor4;
-                    }
-                    // .over-article-subtitle {
-                    // }
-                  }
-                  
                   .over-article-subtitle {
+                    transition: 0.3s all ease-in-out;
                     color: $textColor;
                     font-family: 'elem';
                   }
+                  
+                  &:hover {
+                    .over-article-title {
+                      color: $secondaryColor2;
+                    }
+                    .over-article-subtitle {
+                      background-color: $thirdColor4;
+                      color: $mainColor4;
+                    }
+                  }
+                  
                   
                 }
                 
@@ -122,7 +125,7 @@ $width: 33.3%;
                   color: $backgroundOverArticles;
                   font-size: 0.8rem;
                   font-family: 'LMono';
-                  margin: 30px 7px 10px 7px;
+                  margin: 25px 7px 15px 7px;
                   -webkit-font-smoothing: antialiased !important;
                   font-variation-settings: 'wght' 800, 'wdth' 95;
 
@@ -154,52 +157,68 @@ $width: 33.3%;
 
                   }
                 }
-              }
-              .over-article-bottom {
-                width: 100%;
-                // height: 240px;
-                text-align: left;
-                
-                .over-article-keywords {
-                  //padding-bottom: 12px;
-                  //padding-top: 10px;
-                  // padding-left: 8px;
-                  width: 90%;
-                  overflow: hidden;
-                  line-height: 1.2rem;
+                .over-article-bottom {
+                  width: 100%;
+                  // height: 240px;
+                  text-align: left;
+                  padding-bottom: 6px;
                   
-                  .over-article-keyword {
-                    -webkit-font-smoothing: antialiased !important;
-                    background-color: $backgroundOverArticles;
-                    // text-transform: capitalize;
-                    font-size: 0.7em;
-                    text-decoration: none;
-                    display: inline-block;
-                    padding: 3px 8px 6px 8px;
-                    cursor: pointer;
-                    transition: all 0.1s ease-in;
+                  .over-article-keywords {
+                    //padding-bottom: 12px;
+                    //padding-top: 10px;
+                    // padding-left: 8px;
+                    width: 98%;
+                    overflow: hidden;
+                    line-height: 1rem;
+                    padding-left: 8px;
+                    // appear when window container is enough
+                    display: none;
                     
-                    .over-article-word {
-                      color: $myWhite;
-                      // border-bottom: 1px solid $myWhite;
-                      font-family: 'LMono';
-                      font-variation-settings: "wght" 550, "wdth" 110;
-                      text-transform: uppercase;
-                      transition: .2s all ease-out;
-                      padding-bottom: 2px;
-                      border-bottom: 1px solid transparent;
+                    .over-article-keyword {
+                      -webkit-font-smoothing: antialiased !important;
+                      // text-transform: capitalize;
+                      padding: 3px 8px 3px 0px;
+                      text-decoration: none;
+                      display: inline-block;
+                      cursor: pointer;
+                      transition: all 0.1s ease-in;
                       
-                    }
-                    
-                    &:hover {
+                      &:nth-last-child(1) {
+                        .over-article-word {
+                          &:after {
+                            content: '' !important;
+                          }
+                        }
+                      }
+                      
                       .over-article-word {
-                        border-bottom: 1px solid $myWhite;
-                        // background-color: $secondaryColor3;
-                        // color: $secondaryColor;
+                        color: $myWhite;
+                        font-size: 0.8em;
+                        // border-bottom: 1px solid $myWhite;
+                        font-family: 'LMono';
+                        // letter-spacing: 0.05rem;
+                        text-transform: capitalize;
+                        transition: .2s all ease-out;
+                        padding-bottom: 2px;
+                        border-bottom: 1px solid transparent;
+                        font-variation-settings: 'wght' 800, 'wdth' 75;
+
+                        
+                        &:after {
+                          content: ',';
+                        }
+                      }
+                      
+                      &:hover {
+                        .over-article-word {
+                          border-bottom: 1px solid $myWhite;
+                          // background-color: $secondaryColor3;
+                          // color: $secondaryColor;
+                        }
                       }
                     }
+  
                   }
-
                 }
               }
             }
@@ -247,20 +266,20 @@ $width: 33.3%;
 }
 
 @media all and (max-width: 3000px) {
-  .grid-sizer {width: calc( 25% - 18px) !important}
-  .grid-item {width: calc( 25% - 18px) !important}
+  .grid-sizer {width: calc( 25% - 30px) !important}
+  .grid-item {width: calc( 25% - 30px) !important}
   .grid-item-widthx2 {width: calc( 50%) !important}
 }
 
 @media all and (max-width: 1500px) {
-  .grid-sizer {width: calc(33.3% - 18px) !important}
-  .grid-item {width: calc(33.3% - 18px) !important}
+  .grid-sizer {width: calc(33.3% - 30px) !important}
+  .grid-item {width: calc(33.3% - 30px) !important}
   .grid-item-widthx2 {width: calc(66.6%) !important}
 }
 
 @media all and (max-width: 1050px) {
-  .grid-sizer {width: calc(50% - 18px) !important}
-  .grid-item {width: calc(50% - 18px) !important}
+  .grid-sizer {width: calc(50% - 30px) !important}
+  .grid-item {width: calc(50% - 30px) !important}
   .grid-item-widthx2 {width: 100% !important}
 }
 
@@ -268,6 +287,11 @@ $width: 33.3%;
   #main-content {
     margin-right: 0% !important;
     margin-left: 0% !important;
+    width: 100%;
+
+    .main-over-wrapper {
+      margin-left: 0;
+    }
   }
   .grid-sizer {
     width: 100% !important
