--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -58,6 +58,18 @@ $width: 33.3%;
             position: absolute;
             top: 0;
             left: 0;
+            .over-article-loader-display {
+              width: 30px;
+              height: 60px;
+              background-color: $secondaryColor3;
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              .over-article-loader-sphere {
+              }
+
+            }
           }
 
           .over-article-container {
