--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,8 +12,9 @@
 @import "libs/bioPhrase";
 @import "libs/footer";
 @import "libs/loader";
-@import "libs/articleOpen";
+@import "libs/document";
 @import "libs/curriculum";
+@import "libs/caffee";
 
 //fontello
 @import "libs/font/animation";
