--- a/src/sass/libs/_document.scss
+++ b/src/sass/libs/_document.scss
@@ -86,6 +86,8 @@
   background-color: rgba(#EBE9DE, 1);
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  // grid-auto-rows: minmax(80px, auto);
+  grid-auto-flow: dense;
 
 
   .document-project-front {
@@ -175,7 +177,8 @@
     position: relative;
     align-self: center;
     text-align: center;
-    // grid-column: 3 / 5;
+    grid-column-end: span 2;
+    grid-row-end: span 2;
     // grid-row: 0 / 1;
 
     .document-project-abstract-container {
