--- a/public/css/main.css
+++ b/public/css/main.css
@@ -416,8 +416,8 @@ svg:focus {
                 -moz-hyphens: auto;
                 -ms-hyphens: auto;
                 hyphens: auto;
-                text-transform: uppercase;
                 -webkit-hyphenate-character: '⌁';
+                text-transform: uppercase;
                 cursor: pointer; }
                 #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-titles .over-article-title {
                   margin-right: 4px;
@@ -769,10 +769,12 @@ footer {
 .document-project {
   background-color: #ebe9de;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  grid-auto-flow: dense; }
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-auto-flow: dense;
+  align-items: center; }
   .document-project .document-project-front {
-    grid-column: 1 / 3; }
+    grid-column-end: span 3;
+    grid-row-end: span 2; }
     .document-project .document-project-front .document-project-front-container {
       position: relative; }
       .document-project .document-project-front .document-project-front-container .document-project-front-top {
@@ -838,8 +840,8 @@ footer {
     position: relative;
     align-self: center;
     text-align: center;
-    grid-column-end: span 2;
-    grid-row-end: span 2; }
+    grid-column-end: span 1;
+    grid-row-end: span 1; }
     .document-project .document-project-abstract .document-project-abstract-container {
       display: inline-block;
       width: 80%;
@@ -849,9 +851,72 @@ footer {
         padding: 40px 0;
         width: 100%;
         font-variation-settings: 'wght' 650, 'wdth' 85;
-        font-size: 15pt;
+        font-size: 14pt;
         line-height: 1.2em;
         color: #4b2a28; }
+  .document-project .image-single-2 {
+    grid-column-end: span 2;
+    grid-row-end: span 1; }
+    .document-project .image-single-2 .content-loader {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1; }
+      .document-project .image-single-2 .content-loader .caffe-loader {
+        background: #322934; }
+  .document-project .image-single-1 {
+    grid-column-end: span 1;
+    grid-row-end: span 1;
+    position: relative; }
+    .document-project .image-single-1 .content-loader {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1; }
+      .document-project .image-single-1 .content-loader .caffe-loader {
+        background: #322934; }
+
+.project-image-wrapper {
+  position: relative;
+  z-index: 0; }
+  .project-image-wrapper .project-image {
+    text-align: center; }
+    .project-image-wrapper .project-image .project-image-img {
+      display: inline-block; }
+    .project-image-wrapper .project-image .project-image-captions {
+      text-align: left;
+      position: absolute;
+      top: 16px;
+      left: 16px;
+      line-height: 1.1em;
+      background-color: #322934;
+      padding: 3px 4px 3px 3px;
+      opacity: 0;
+      transition: all 0.3s ease-in-out; }
+      .project-image-wrapper .project-image .project-image-captions .project-image-supercaption {
+        font-family: 'eleb';
+        margin-bottom: 0.1em;
+        color: #e6fcff; }
+      .project-image-wrapper .project-image .project-image-captions .project-image-caption {
+        font-family: 'LMono';
+        color: #e6fcff;
+        font-size: 0.8em; }
+    .project-image-wrapper .project-image:hover .project-image-captions {
+      opacity: 1; }
+
+@media all and (max-width: 975px) {
+  .document-project .document-project-abstract {
+    grid-column-end: span 3; }
+  .document-project .image-single-2 {
+    grid-column-end: span 3; } }
+
+@media all and (min-width: 1215px) {
+  .document-project .document-project-abstract {
+    grid-column-end: span 2; } }
 
 @keyframes rotateHead {
   0% {
